# TNTECHeck

./: .gitignore  AGENTS.md  Functional_Specifications.md  PROJECT_STATUS_TODO.md  agents.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: refresh-eligibility-extract.yml
backend/: pyproject.toml
backend/api/: app.py
backend/app/: benchmarks.py  grants_eligibility_harvester.py  main.py  models.py  registry.py  reporting.py
backend/app/data/: comparison_groups.json  docs.json  eligibility_profiles.json  grants_gov_instruction_eligibility_extracts.json  indicators.json  presets.json  program_groups.json  sources.json
backend/registry/: loader.py  models.py
backend/tests/: test_benchmarks.py  test_comparison_group_crud.py  test_comparison_groups_and_benchmarks.py  test_grants_eligibility_harvester.py  test_meta_endpoints.py  test_program_group_crud.py  test_report_run.py
backend/tntecheck_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: meta-endpoints.md  registry-structure.md
docs/Reference_Documentation/: DOCUMENTATION_GAPS.md  README.md
registries/: comparison_groups.json  eligibility_profiles.json  indicators.json  presets.json  program_groups.json  source_docs.json  sources.json
src/: App.jsx  main.jsx  styles.css
src/components/: AppLayout.jsx  ErrorState.jsx  LoadingState.jsx  useAsyncData.js
src/pages/: ComparisonGroupManagerPage.jsx  ComparisonGroupsPage.jsx  HomePage.jsx  PlaceholderPage.jsx  (+3 more)
tests/: test_adapter_contract.py  test_meta_endpoints.py  test_registry_loader.py
(+56 files in other folders)
